[package]
name = "impl-chip8"
version = "0.1.0"
authors = ["yanick <yanick.xia@gmail.com>"]
edition = "2018"
autobins = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "chip8vm"
path = "src/lib.rs"

[[bin]]
name = "chip8ui"
path = "src/bin/main.rs"

[dependencies]
log = "0.4.8"
env_logger = "0.7.1"
time = "0.2.7"
getopts = "0.2.21"
rand = "0.7.3"
sdl2 = "0.33.0"
